# django-huey-email

./: LICENSE  README.md  manage.py  pyproject.toml  tox.ini
huey_email/: backends.py  models.py
tests/: settings.py  test.py
